# py-mdbm

./: .gitignore  .travis.yml  LICENSE  MANIFEST  MANIFEST.in  Makefile  README.md  README.rst  README.txt  TODO  aa  for-benchmark-py26_or_higher-requirements.txt  libmdbm.c  libmdbm.h  pyproject.toml  requirements.txt  setup.py  setup.py2X_37under  test.py  test_benchmark.py  tt.py
.github/workflows/: codeql-analysis.yml  py-mdbm.yaml  py-mdbm.yml  python-package.yml
example/: byte_store_fetch.py3  delete.py  delete_r.py  fetch.py  fetch.py3  fetch_and_update.py  fetch_info.py  iterall.py  iterall_r.py  iterkey.py  store.py  store_dup_fetch_all_value.py3
example/.ropeproject/: globalnames
py_mdbm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: libmdbm.c  libmdbm.h
src/py_mdbm.egg-info/: PKG-INFO  SOURCES.txt
tests/: .valgrind-python.supp  .valgrind-python3.supp  test.py  test_benchmark.py
