[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "py-mdbm"
version = "0.1.1"
authors = [
  { name="Torden", email="ioemen@gmail.com" },
]
description="The Python interface to the MDBM key-value store."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Utilities",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]

[project.urls]
"Homepage" = "https://github.com/torden/py-mdbm"
"Bug Tracker" = "https://github.com/torden/py-mdbm/issues"
